stderr
Hiker.java:7: error: cannot find symbol
        List<String> list = new Arraylist<String>();
                                ^
  symbol:   class Arraylist
  location: class Hiker
HikerTest.java:14: error: cannot find symbol
        List<String> actual = Hiker.answer().split("\n");
                                            ^
  symbol:   method split(String)
  location: interface List<String>
2 errors
